<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.firstapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_aboutme"
        android:name="com.example.firstapp.ui.gallery.GalleryFragment"
        android:label="@string/name_about"
        tools:layout="@layout/fragment_aboutme" />

    <fragment
        android:id="@+id/nav_contct"
        android:name="com.example.firstapp.ui.slideshow.SlideshowFragment"
        android:label="@string/name_contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/addcontactsFragment"
        android:name="com.example.firstapp.ui.addcontacts.AddcontactsFragment"
        android:label="fragment_addcontacts"
        tools:layout="@layout/fragment_addcontacts" />
</navigation>